API calls for invoices, addres deleting not delete anymore

--- a/wsgiadmin/templates/app_info.html
+++ b/wsgiadmin/templates/app_info.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <th>{% trans "FTP/SFTP" %}</th>
-            <td>{% trans "Host" %}: {{ app.server.hostname }} / {% trans "User" %}: {{ app.get_user }}</td>
+            <td>{% trans "Host" %}: {{ app.server.domain }} / {% trans "User" %}: {{ app.get_user }}</td>
         </tr>
         <tr>
             <th>{% trans "Domains" %}</th>
