--- a/wsgiadmin/templates/credit.html
+++ b/wsgiadmin/templates/credit.html
@@ -21,6 +21,11 @@
             </tr>
         {% else %}
             <tr>
+                <td>{% trans "Apps" %}</td>
+                <td>{{ u.parms.count_apps }}×</td>
+                <td>{{ u.parms.pay_for_apps|floatformat:2 }}</td>
+            </tr>
+            <tr>
                 <td>{% trans "Webs/Applications" %}</td>
                 <td>{{ u.parms.count_sites }}×</td>
                 <td>{{ u.parms.pay_for_sites|floatformat:2 }}</td>
@@ -88,6 +93,7 @@
     <tr>
         <th colspan="2">{% trans "Buy some more" %}</th>
     </tr>
+    {% if for_month %}
     <tr>
         <td>{% trans "Buy credit for month" %} (30 {% trans "days" %})</td>
         <td>
@@ -100,6 +106,8 @@
             </form>
         </td>
     </tr>
+    {% endif %}
+    {% if for_three_months %}
     <tr>
         <td>{% trans "Buy credit for three months" %} (90 {% trans "days" %})</td>
         <td>
@@ -112,6 +120,8 @@
             </form>
         </td>
     </tr>
+    {% endif %}
+    {% if for_six_months %}
     <tr>
         <td>{% trans "Buy for six months" %} (180 {% trans "days" %})</td>
         <td>
@@ -124,6 +134,8 @@
             </form>
         </td>
     </tr>
+    {% endif %}
+    {% if for_year %}
     <tr>
         <td>{% trans "Buy for year" %} (360 {% trans "days" %})</td>
         <td>
@@ -136,6 +148,7 @@
             </form>
         </td>
     </tr>
+    {% endif %}
     <tr>
         <td>{% trans "Buy custom" %}</td>
         <td>
