Payment text update

--- a/wsgiadmin/templates/payment_done.html
+++ b/wsgiadmin/templates/payment_done.html
@@ -10,7 +10,7 @@
 
     <h2>{% trans "Payment is done" %}</h2>
 
-    <p>{% trans "Thank you, your payments was accepted. Credits will be approved after confirmation from GoPay. Confirmation depends on payment method." %}</p>
+    <p>{% trans "Thank you for your payment. Credits will be approved after confirmation from GoPay. Confirmation depends on payment method." %}</p>
 
     <p><a href="{% url payment_info pk=credit.id %}" class="btn">{% trans "Payment detail" %}</a></p>
 
