--- a/wsgiadmin/templates/payment_error.html
+++ b/wsgiadmin/templates/payment_error.html
@@ -13,7 +13,7 @@
     <p>{% trans "Payment has been failed because one of this reason:" %}</p>
 
     <ul>
-        <li>{% trans "You cancel it" %}</li>
+        <li>{% trans "You canceled it" %}</li>
         <li>{% trans "GoPay refuse your payment" %}</li>
     </ul>
 {% endblock %}
