--- a/wsgiadmin/templates/payment_infopage.html
+++ b/wsgiadmin/templates/payment_infopage.html
@@ -64,10 +64,13 @@
 
     {% if gopay %}
     <h2>{% trans "Payment via GoPay (Credit Card)" %}</h2>
-
-    <p>{% trans "If you prefer fast and simple payments, use GoPay and pay with credit card or other quick methods." %}</p>
-
-    <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-primary">{% trans "Pay with GoPay" %}</a></p>
+    {% if not credit.gopay_payment %}
+        <p>{% trans "If you prefer fast and simple payments, use GoPay and pay with credit card or other quick methods." %}</p>
+        <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-primary">{% trans "Pay with GoPay" %}</a></p>
+    {% else %}
+        <p>It looks like you have already try make a payment via GoPay. If your attempt failed, let's try it again.</p>
+        <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-primary">{% trans "Try again with GoPay" %}</a></p>
+    {% endif %}
     {% endif %}
 
     <h2>{% trans "Payment via your bank" %}</h2>
