GoPay button style

--- a/wsgiadmin/templates/payment_infopage.html
+++ b/wsgiadmin/templates/payment_infopage.html
@@ -66,7 +66,7 @@
     <h2>{% trans "Payment via GoPay (Credit Card)" %}</h2>
     {% if not credit.gopay_payment %}
         <p>{% trans "If you prefer fast and simple payments, use GoPay and pay with credit card or other quick methods." %}</p>
-        <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-primary">{% trans "Pay with GoPay" %}</a></p>
+        <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-success btn-large">{% trans "Pay with GoPay" %}</a></p>
     {% else %}
         <p>It looks like you have already try make a payment via GoPay. If your attempt failed, let's try it again.</p>
         <p><a href="{% url payment_gopay %}?credit_id={{ credit.id }}" class="btn btn-primary">{% trans "Try again with GoPay" %}</a></p>
