--- a/wsgiadmin/templates/boxes.html
+++ b/wsgiadmin/templates/boxes.html
@@ -15,48 +15,40 @@
     <div id="message-box"></div>
 
     <h3>{% trans "List of e-mail boxes" %}</h3>
+    <hr>
+    <p>
+        <a href="{% url email_domain_add %}" class="btn btn-primary"><i class="icon-plus icon-white"></i> {% trans "Add domain" %}</a>
+        <a href="{% url add_mailbox %}" class="btn btn-primary"><i class="icon-plus icon-white"></i> {% trans "Add mailbox" %}</a>
+    </p>
+    <hr>
+
+    {% for domain in object_list %}
+    {% if domain.boxes %}
     <table class="table table-striped">
         <thead>
-        <tr>
-            <th>{% trans "E-mail" %}</th>
-            <th>{% trans "Action" %}</th>
-        </tr>
+            <tr>
+                <th colspan="2">{{ domain.name }}</th>
+            </tr>
         </thead>
-        {% if object_list %}
-            <tbody id="objects_list">
-            {% for email in object_list %}
+        <tbody id="objects_list">
+            {% for email in domain.boxes %}
                 <tr>
                     <td>{{ email.login }}@{{ email.domain.name }}</td>
                     <td>
                         <ul class="akce">
-                        <li><a href="{% url wsgiadmin.emails.views.changePasswdBox email.id %}" title="{% trans "Edit" %}">
-                            <img src="{{ STATIC_URL }}images/ico-heslo.png" alt="{% trans "Change password" %}"/>
-                        </a></li>
-
-                        <li class="smazat"><a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ email.id }}">
-                            <img src="{{ STATIC_URL }}images/ico-smazat.png" alt="{% trans "Delete" %}"/>
-                        </a></li>
+                        <li>
+                            <a href="{% url wsgiadmin.emails.views.changePasswdBox email.id %}" class="btn btn-warning">{% trans "Change password" %}</a>
+                        </li>
+                        <li class="smazat">
+                            <a href="#" class="object_delete btn btn-danger" rel="{{ email.id }}">{% trans "Delete" %}</a>
+                        </li>
                         </ul>
                         <span id="removed_{{ email.id }}" class="info"></span>
                     </td>
                 </tr>
             {% endfor %}
-            </tbody>
-            <tfoot>
-            <tr>
-                <td colspan="3">
-                    <div class="pagination">
-                        {% include "paginator.html" %}
-                    </div>
-                </td>
-            </tr>
-            </tfoot>
-        {% else %}
-            <tbody>
-            <tr>
-                <td colspan="3">{% trans "Oh no, you still haven't created any e-mail box, but don't worry: you can use the menu on left side to fix that." %}</td>
-            </tr>
-            </tbody>
-        {% endif %}
+        </tbody>
     </table>
+    {% endif %}
+    {% endfor %}
 {% endblock %}
